1. Set a proper window size to fix customer's device screen.

--- a/LedApp/LedApp.rc
+++ b/LedApp/LedApp.rc
@@ -71,15 +71,15 @@ IDR_MAINFRAME           ICON                    "res\\LedApp.ico"
 // Dialog
 //
 
-IDD_LEDAPP_DIALOG DIALOG  0, 0, 249, 162
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
+IDD_LEDAPP_DIALOG DIALOG  0, 0, 455, 337
+STYLE DS_SETFONT | DS_MODALFRAME | DS_CENTER | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_APPWINDOW | 0x80000000L
-CAPTION "LedApp"
-FONT 8, "MS Shell Dlg"
+CAPTION "7777"
+FONT 10, "Microsoft Sans Serif"
 BEGIN
-    PUSHBUTTON      "Do",IDC_DO,161,34,50,14
-    EDITTEXT        IDC_EDIT1,23,11,192,14,ES_AUTOHSCROLL
-    PUSHBUTTON      "Clear",IDC_CLEAR,161,54,50,14
+    PUSHBUTTON      "Do",IDC_DO,255,202,50,14
+    EDITTEXT        IDC_EDIT1,54,70,192,14,ES_AUTOHSCROLL
+    PUSHBUTTON      "Clear",IDC_CLEAR,405,323,50,14
 END
 
 
