--- a/LedApp/LedApp.rc
+++ b/LedApp/LedApp.rc
@@ -107,16 +107,16 @@ BEGIN
     GROUPBOX        "Add Dynamic Area",IDC_STATIC,10,95,435,27
     GROUPBOX        "Dynamic Area",IDC_STATIC,5,64,445,65
     LISTBOX         IDC_CONTENT_LIST,13,148,185,88,LBS_NOINTEGRALHEIGHT | WS_DISABLED | WS_VSCROLL | WS_TABSTOP
-    PUSHBUTTON      "Add File",IDC_ADD_FILE,205,148,50,14,WS_DISABLED
+    PUSHBUTTON      "Add File",IDC_ADD_FILE,205,148,50,14,NOT WS_VISIBLE | WS_DISABLED
     PUSHBUTTON      "Add Text",IDC_ADD_TEXT,205,168,50,14,WS_DISABLED
     PUSHBUTTON      "Delete",IDC_DELETE_CONTENT,205,188,50,14,WS_DISABLED
     CONTROL         "Show Single Line",IDC_SINGLE_LINE,"Button",BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,205,215,66,10
     LTEXT           "Font Name",IDC_STATIC,282,144,34,8
-    COMBOBOX        IDC_FONT_LIST,331,142,90,30,CBS_DROPDOWNLIST | WS_DISABLED | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_FONT_LIST,331,142,90,60,CBS_DROPDOWNLIST | CBS_SORT | WS_DISABLED | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Font Size",IDC_STATIC,282,160,29,8
     EDITTEXT        IDC_FONT_SIZE,331,157,40,14,ES_AUTOHSCROLL | ES_NUMBER | WS_DISABLED
     LTEXT           "Font Color",IDC_STATIC,282,176,32,8
-    COMBOBOX        IDC_FONT_COLOR,331,174,90,30,CBS_DROPDOWNLIST | WS_DISABLED | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_FONT_COLOR,331,174,90,60,CBS_DROPDOWNLIST | WS_DISABLED | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Style",IDC_STATIC,282,192,22,8
     COMBOBOX        IDC_CONTENT_STYLE,331,190,90,60,CBS_DROPDOWNLIST | WS_DISABLED | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Speed",IDC_STATIC,282,209,22,8
@@ -130,6 +130,16 @@ BEGIN
     LISTBOX         IDC_LOG_LIST,13,278,378,49,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Clear",IDC_CLEAR_LOG,400,278,46,23
     GROUPBOX        "Log",IDC_STATIC,5,266,445,68
+END
+
+IDD_INPUT_TEXT DIALOG  0, 0, 248, 147
+STYLE DS_SETFONT | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Input Text"
+FONT 8, "MS Shell Dlg"
+BEGIN
+    PUSHBUTTON      "OK",IDOK,128,126,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,191,126,50,14
+    EDITTEXT        IDC_TEXT,7,7,234,115,ES_MULTILINE | ES_AUTOHSCROLL
 END
 
 
@@ -185,6 +195,14 @@ BEGIN
         RIGHTMARGIN, 450
         BOTTOMMARGIN, 334
     END
+
+    IDD_INPUT_TEXT, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 241
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 140
+    END
 END
 #endif    // APSTUDIO_INVOKED
 
@@ -232,6 +250,12 @@ BEGIN
 0x4f43, 0x394d, "\000" 
     IDC_BAUD_RATE, 0x403, 6, 0
 0x3735, 0x3036, 0x0030, 
+    IDC_FONT_COLOR, 0x403, 4, 0
+0x6552, 0x0064, 
+    IDC_FONT_COLOR, 0x403, 6, 0
+0x7247, 0x6565, 0x006e, 
+    IDC_FONT_COLOR, 0x403, 7, 0
+0x6559, 0x6c6c, 0x776f, "\000" 
     0
 END
 
