--- a/LedApp/LedApp.rc
+++ b/LedApp/LedApp.rc
@@ -132,14 +132,14 @@ BEGIN
     GROUPBOX        "日志",IDC_STATIC,5,266,445,68
 END
 
-IDD_INPUT_TEXT DIALOG  0, 0, 248, 147
+IDD_INPUT_TEXT DIALOG  0, 0, 280, 167
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "输入文字"
 FONT 8, "MS Shell Dlg"
 BEGIN
-    PUSHBUTTON      "确认",IDOK,128,126,50,14
-    PUSHBUTTON      "取消",IDCANCEL,191,126,50,14
-    EDITTEXT        IDC_TEXT,7,7,234,115,ES_MULTILINE | ES_AUTOHSCROLL
+    PUSHBUTTON      "确认",IDOK,157,146,50,14
+    PUSHBUTTON      "取消",IDCANCEL,223,146,50,14
+    EDITTEXT        IDC_TEXT,7,7,266,133,ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | ES_WANTRETURN | WS_VSCROLL | WS_HSCROLL
 END
 
 
@@ -199,9 +199,9 @@ BEGIN
     IDD_INPUT_TEXT, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 241
+        RIGHTMARGIN, 273
         TOPMARGIN, 7
-        BOTTOMMARGIN, 140
+        BOTTOMMARGIN, 160
     END
 END
 #endif    // APSTUDIO_INVOKED
