--- a/LedApp/LedApp.rc
+++ b/LedApp/LedApp.rc
@@ -107,7 +107,7 @@ BEGIN
     GROUPBOX        "添加动态区域",IDC_STATIC,10,93,435,29
     GROUPBOX        "动态区域设置",IDC_STATIC,5,64,445,65
     LISTBOX         IDC_CONTENT_LIST,13,148,185,88,LBS_NOINTEGRALHEIGHT | WS_DISABLED | WS_VSCROLL | WS_TABSTOP
-    PUSHBUTTON      "添加文件",IDC_ADD_FILE,205,148,50,14,NOT WS_VISIBLE | WS_DISABLED
+    PUSHBUTTON      "添加文件",IDC_ADD_FILE,205,148,50,14,WS_DISABLED
     PUSHBUTTON      "添加文字",IDC_ADD_TEXT,205,168,50,14,WS_DISABLED
     PUSHBUTTON      "删除",IDC_DELETE_CONTENT,205,188,50,14,WS_DISABLED
     CONTROL         "显示单行",IDC_SINGLE_LINE,"Button",BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,205,215,66,10
