1. Add network settings to LedApp

--- a/LedApp/LedApp.rc
+++ b/LedApp/LedApp.rc
@@ -86,11 +86,15 @@ BEGIN
     LTEXT           "高度",IDC_STATIC,311,18,26,8
     EDITTEXT        IDC_SCREEN_HEIGHT,338,15,23,14,ES_AUTOHSCROLL | ES_NUMBER
     PUSHBUTTON      "设置",IDC_SET_SCREEN,388,12,50,20
-    LTEXT           "串口",IDC_STATIC,16,43,16,8
+    LTEXT           "串口",IDC_SERIAL_LABEL,16,43,16,8
     COMBOBOX        IDC_SERIAL_PORT,51,41,48,60,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "波特率",IDC_STATIC,117,43,24,8
+    LTEXT           "波特率",IDC_BAUDRATE_LABEL,117,43,24,8
     COMBOBOX        IDC_BAUD_RATE,156,41,48,30,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-    GROUPBOX        "串口配置",IDC_STATIC,10,31,435,25
+	LTEXT           "IP地址",IDC_IPADDR_LABEL,16,43,22,8,NOT WS_VISIBLE
+    EDITTEXT        IDC_IP_ADDRESS,51,41,75,14,ES_AUTOHSCROLL | NOT WS_VISIBLE
+    LTEXT           "端口",IDC_PORT_LABEL,132,43,16,8,NOT WS_VISIBLE
+    EDITTEXT        IDC_TCP_PORT,156,41,40,14,ES_AUTOHSCROLL | ES_NUMBER | NOT WS_VISIBLE
+    GROUPBOX        "串口配置",IDC_PORT_GROUP,10,31,435,25
     GROUPBOX        "显示屏设置",IDC_STATIC,5,5,445,54
     LTEXT           "编号",IDC_STATIC,12,79,16,8
     COMBOBOX        IDC_AREA_LIST,63,77,41,60,CBS_DROPDOWNLIST | CBS_SORT | WS_DISABLED | WS_VSCROLL | WS_TABSTOP
