1. Set baudrate combobox style to drop-list; 2. Use user selected baudrate value.

--- a/LedApp/LedApp.rc
+++ b/LedApp/LedApp.rc
@@ -89,8 +89,8 @@ BEGIN
     LTEXT           "串口",IDC_SERIAL_LABEL,16,43,16,8
     COMBOBOX        IDC_SERIAL_PORT,51,41,48,60,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     LTEXT           "波特率",IDC_BAUDRATE_LABEL,117,43,24,8
-    COMBOBOX        IDC_BAUD_RATE,156,41,48,30,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-	LTEXT           "IP地址",IDC_IPADDR_LABEL,16,43,22,8,NOT WS_VISIBLE
+    COMBOBOX        IDC_BAUD_RATE,156,41,48,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "IP地址",IDC_IPADDR_LABEL,16,43,22,8,NOT WS_VISIBLE
     EDITTEXT        IDC_IP_ADDRESS,51,41,75,14,ES_AUTOHSCROLL | NOT WS_VISIBLE
     LTEXT           "端口",IDC_PORT_LABEL,132,43,16,8,NOT WS_VISIBLE
     EDITTEXT        IDC_TCP_PORT,156,41,40,14,ES_AUTOHSCROLL | ES_NUMBER | NOT WS_VISIBLE
@@ -248,6 +248,8 @@ BEGIN
 0x4f43, 0x384d, "\000" 
     IDC_SERIAL_PORT, 0x403, 5, 0
 0x4f43, 0x394d, "\000" 
+    IDC_BAUD_RATE, 0x403, 5, 0
+0x3639, 0x3030, "\000" 
     IDC_BAUD_RATE, 0x403, 6, 0
 0x3735, 0x3036, 0x0030, 
     0
