--- a/LedApp/LedApp.rc
+++ b/LedApp/LedApp.rc
@@ -89,7 +89,7 @@ BEGIN
     LTEXT           "串口",IDC_SERIAL_LABEL,16,43,16,8
     COMBOBOX        IDC_SERIAL_PORT,51,41,48,60,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     LTEXT           "波特率",IDC_BAUDRATE_LABEL,117,43,24,8
-    COMBOBOX        IDC_BAUD_RATE,156,41,48,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_BAUD_RATE,156,41,48,60,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     LTEXT           "IP地址",IDC_IPADDR_LABEL,16,43,22,8,NOT WS_VISIBLE
     EDITTEXT        IDC_IP_ADDRESS,51,41,75,14,ES_AUTOHSCROLL | NOT WS_VISIBLE
     LTEXT           "端口",IDC_PORT_LABEL,132,43,16,8,NOT WS_VISIBLE
@@ -230,6 +230,8 @@ BEGIN
 0x5842, 0x352d, 0x3251, 0x002b, 
     IDC_CONTROLLER_TYPE, 0x403, 8, 0
 0x5842, 0x352d, 0x3351, 0x002b, 
+    IDC_SERIAL_PORT, 0x403, 5, 0
+0x4f43, 0x304d, "\000" 
     IDC_SERIAL_PORT, 0x403, 5, 0
 0x4f43, 0x314d, "\000" 
     IDC_SERIAL_PORT, 0x403, 5, 0
